--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular/flex-layout": "2.0.0-beta.9",
     "@angular/forms": "4.4.7",
     "@angular/http": "4.4.7",
-    "@angular/material": "^2.0.0-beta.12",
+    "@angular/material": "7.3.4",
     "@angular/platform-browser": "4.4.7",
     "@angular/platform-browser-dynamic": "4.4.7",
     "@angular/router": "4.4.7",
